--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "description": "Saurabh Chowdhury's Strapi application",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
@@ -19,21 +19,21 @@
     "pg": "7.4.3",
     "rimraf": "^3.0.1",
     "sqlite3": "latest",
-    "strapi": "3.0.0-beta.19.4",
-    "strapi-admin": "3.0.0-beta.19.4",
-    "strapi-connector-bookshelf": "3.0.0-beta.19.4",
-    "strapi-plugin-content-manager": "3.0.0-beta.19.4",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.19.4",
-    "strapi-plugin-email": "3.0.0-beta.19.4",
-    "strapi-plugin-graphql": "3.0.0-beta.19.4",
-    "strapi-plugin-upload": "3.0.0-beta.19.4",
-    "strapi-plugin-users-permissions": "3.0.0-beta.19.4",
-    "strapi-provider-upload-cloudinary": "3.0.0-beta.19.4",
-    "strapi-utils": "3.0.0-beta.19.4",
+    "strapi": "3.0.0-beta.20",
+    "strapi-admin": "3.0.0-beta.20",
+    "strapi-connector-bookshelf": "3.0.0-beta.20",
+    "strapi-plugin-content-manager": "3.0.0-beta.20",
+    "strapi-plugin-content-type-builder": "3.0.0-beta.20",
+    "strapi-plugin-email": "3.0.0-beta.20",
+    "strapi-plugin-graphql": "3.0.0-beta.20",
+    "strapi-plugin-upload": "3.0.0-beta.20",
+    "strapi-plugin-users-permissions": "3.0.0-beta.20",
+    "strapi-provider-upload-cloudinary": "3.0.0-beta.20",
+    "strapi-utils": "3.0.0-beta.20",
     "unzip-stream": "^0.3.0"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Saurabh Chowdhury"
   },
   "strapi": {
     "uuid": ""
